# Mineanarchy

./: .gitmodules  CMakeLists.txt  README.md  fbx2ozz.cpp  gltf2ozzlocation  jointattachment.cpp  learnopengl.cpp  ma_Camera.cpp  ma_Camera.h  ma_Chunk.cpp  ma_Chunk.h  ma_CommandBuffer.cpp  ma_CommandBuffer.h  ma_CommandPool.cpp  ma_CommandPool.h  ma_DescriptorSet.cpp  ma_DescriptorSet.h  ma_DescriptorSetLayout.cpp  ma_DescriptorSetLayout.h  ma_GraphicsPipeline.cpp  ma_GraphicsPipeline.h  ma_IndexBufferManager.cpp  ma_IndexBufferManager.h  ma_Instance.cpp  ma_Instance.h  ma_LogicalDevice.cpp  ma_LogicalDevice.h  ma_Mesher.cpp  ma_Mesher.h  ma_Meshersave.cpp  ma_Model.cpp  ma_Model.h  ma_OzzModel.cpp  ma_OzzModel.h  ma_RenderPass.cpp  ma_RenderPass.h  ma_SwapChain.cpp  ma_SwapChain.h  ma_TerrainGenerator.cpp  ma_TerrainGenerator.h  (+15 more)
imageviewschapter/: CMakeLists.txt
learnopenglassimp/: main.cpp
loading_models_chapter_28/: CMakeLists.txt
mineanarchy/: simpleanim.blend
mineanarchy/models/: ArmatureAction.ozz  simpleanim.glb  simpleanim.gltf  simpleanim2.gltf  skeleton.ozz
mineanarchy/shaders/: a.spv  chunkvertexshader.glsl  vert.spv  vertex.glsl
ozz-animation-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/howtos/: CTestTestfile.cmake  Makefile  cmake_install.cmake  custom_animation_importer  custom_skeleton_importer  load_from_file
ozz-animation-build/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/samples/additive/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_additive
ozz-animation-build/samples/attach/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_attach
ozz-animation-build/samples/baked/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_baked
ozz-animation-build/samples/blend/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_blend
ozz-animation-build/samples/foot_ik/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_foot_ik
ozz-animation-build/samples/framework/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/samples/framework/glfw/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/samples/framework/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/samples/look_at/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_look_at
ozz-animation-build/samples/millipede/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_millipede
ozz-animation-build/samples/multithread/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_multithread
ozz-animation-build/samples/optimize/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_optimize
ozz-animation-build/samples/partial_blend/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_partial_blend
ozz-animation-build/samples/playback/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_playback
ozz-animation-build/samples/skinning/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_skinning
ozz-animation-build/samples/two_bone_ik/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_two_bone_ik
ozz-animation-build/samples/user_channel/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample_user_channel
ozz-animation-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/animation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/animation/offline/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/animation/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/geometry/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src/options/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/src_fused/: ozz_animation.cc  ozz_animation_offline.cc  ozz_base.cc
ozz-animation-build/temp/: gltf_ruby_animation.ozz  gltf_ruby_skeleton.ozz  valid_config.json
ozz-animation-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/test/animation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/test/animation/offline/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_additive_animation_builder  test_animation_builder  test_animation_optimizer  test_fuse_animation_offline  test_raw_animation_archive  test_raw_animation_archive_versioning  test_raw_animation_utils  test_raw_skeleton_archive  test_raw_skeleton_archive_versioning  test_raw_track_archive  test_skeleton_builder  test_track_builder  test_track_optimizer
ozz-animation-build/test/animation/runtime/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_animation_archive  test_animation_archive_versioning  test_animation_utils  test_blending_job  test_fuse_animation  test_ik_aim_job  test_ik_two_bone_job  test_local_to_model_job  test_sampling_job  test_skeleton_archive  test_skeleton_archive_versioning  test_skeleton_utils  test_track_archive  test_track_sampling_job  test_track_triggering_job
ozz-animation-build/test/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_endianness  test_fuse_base  test_log  test_platform
ozz-animation-build/test/base/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_intrusive_list  test_std_containers  (+1 more)
ozz-animation-build/test/geometry/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/test/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ozz-animation-build/test/options/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_fuse_options  test_options  test_options_registration  test_options_registration_empty
shadermoduleschapter/: CMakeLists.txt  main.cpp
ubos_chapter/: 23_descriptor_sets.cpp  CMakeLists.txt
(+47 files in other folders)
